--- a/src/styles/Globalll.css
+++ b/src/styles/Globalll.css
@@ -307,16 +307,6 @@ input[type="search"]::-webkit-search-decoration {
     padding: 10px 16px;
 }
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-    color: #1D62F0;
-    border-color: #1D62F0;
-    background-color: rgba(0, 0, 0, .0);
-}
-
 .btn-info:hover,
 .btn-info:focus,
 .btn-info:active,
@@ -378,25 +368,6 @@ input[type="search"]::-webkit-search-decoration {
 .btn[disabled],
 fieldset[disabled] .btn {
     opacity: 0.45;
-}
-
-.btn-primary.disabled,
-.btn-primary[disabled],
-fieldset[disabled] .btn-primary,
-.btn-primary.disabled:hover,
-.btn-primary[disabled]:hover,
-fieldset[disabled] .btn-primary:hover,
-.btn-primary.disabled:focus,
-.btn-primary[disabled]:focus,
-fieldset[disabled] .btn-primary:focus,
-.btn-primary.disabled:active,
-.btn-primary[disabled]:active,
-fieldset[disabled] .btn-primary:active,
-.btn-primary.disabled.active,
-.btn-primary.active[disabled],
-fieldset[disabled] .btn-primary.active {
-    background-color: rgba(0, 0, 0, 0);
-    border-color: #3472F7;
 }
 
 .btn-info.disabled,
@@ -487,18 +458,6 @@ fieldset[disabled] .btn-warning.active {
     border-color: #000000;
     border-radius: 1px;
     padding: 10px 20px;
-    font-weight: 600;
-}
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary:active:focus,
-.open>.dropdown-toggle.btn-primary {
-    color: #000000;
-    background-color: #313538;
-    border-color: #282829;
     font-weight: 600;
 }
 
@@ -2492,7 +2451,6 @@ single property page
     font-size: 30px;
     letter-spacing: 1.5px;
     right: 0px;
-    border-bottom: 2px solid;
     line-height: 42px;
 }
 
@@ -2608,7 +2566,7 @@ single property page
 }
 
 .dealer-social-media a {
-    color: #969696;
+    color: white;
     margin: 5px;
     margin-left: 12px;
 }
